@@ -6,20 +6,21 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import ru.erma.dto.ReadingDTO;
+import ru.erma.dto.ReadingListDTO;
 import ru.erma.dto.ReadingRequest;
-import ru.erma.exception.NotValidArgumentException;
 import ru.erma.exception.ReadingNotFoundException;
+import ru.erma.mappers.ReadingMapper;
 import ru.erma.model.Reading;
 import ru.erma.repository.ReadingRepository;
 
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -38,12 +39,13 @@ class ReadingServiceTest {
     @Mock
     private ReadingRepository<String,Reading> readingRepository;
 
-    @Mock
-    private ReadingStructureService readingStructureService;
-
     /**
      * The ReadingService instance under test, with mocked dependencies.
      */
+
+    @Mock
+    private ReadingMapper readingMapper;
+
     @InjectMocks
     private ReadingService readingService;
 
@@ -60,88 +62,15 @@ class ReadingServiceTest {
         values.put("hot water", 40);
         ReadingRequest readingRequest = new ReadingRequest("testUser", 1, 2022, values);
 
-        when(readingStructureService.getReadingTypes()).thenReturn(Arrays.asList("heating", "cold water", "hot water"));
+        Reading reading = new Reading();
+        when(readingMapper.toReading(readingRequest)).thenReturn(reading);
+
 
         readingService.submitReadings(readingRequest);
 
-        verify(readingRepository, times(1)).save(eq("testUser"), any(Reading.class));
+        verify(readingRepository, times(1)).save(eq("testUser"), eq(reading));
     }
 
-    /**
-     * This test verifies that the submitReadings method throws a NotValidArgumentException
-     * when an invalid month is provided in the ReadingRequest.
-     * The ReadingRequest is created with a month value of 13, which is invalid because the valid range for month is 1-12.
-     * The test asserts that a NotValidArgumentException is thrown when submitReadings is called with this ReadingRequest.
-     */
-    @Test
-    @DisplayName("Submit readings throws exception for invalid month")
-    void submitReadings_throwsExceptionForInvalidMonth() {
-        Map<String, Integer> values = new HashMap<>();
-        values.put("heating", 20);
-        values.put("cold water", 30);
-        values.put("hot water", 40);
-        ReadingRequest readingRequest = new ReadingRequest("testUser", 13, 2022, values);
-
-        assertThatThrownBy(() -> readingService.submitReadings(readingRequest))
-                .isInstanceOf(NotValidArgumentException.class);
-    }
-
-    /**
-     * This test verifies that the submitReadings method throws a NotValidArgumentException
-     * when an invalid year is provided in the ReadingRequest.
-     * The ReadingRequest is created with a year value of -1, which is invalid because the year should be a positive number.
-     * The test asserts that a NotValidArgumentException is thrown when submitReadings is called with this ReadingRequest.
-     */
-    @Test
-    @DisplayName("Submit readings throws exception for invalid year")
-    void submitReadings_throwsExceptionForInvalidYear() {
-        Map<String, Integer> values = new HashMap<>();
-        values.put("heating", 20);
-        values.put("cold water", 30);
-        values.put("hot water", 40);
-        ReadingRequest readingRequest = new ReadingRequest("testUser", 1, -1, values);
-
-        assertThatThrownBy(() -> readingService.submitReadings(readingRequest))
-                .isInstanceOf(NotValidArgumentException.class);
-    }
-
-    /**
-     * This test verifies that the submitReadings method throws a NotValidArgumentException
-     * when an invalid reading value is provided in the ReadingRequest.
-     * The ReadingRequest is created with a reading value of -20 for "heating", which is invalid because reading values should be positive numbers.
-     * The test asserts that a NotValidArgumentException is thrown when submitReadings is called with this ReadingRequest.
-     */
-    @Test
-    @DisplayName("Submit readings throws exception for invalid readings")
-    void submitReadings_throwsExceptionForInvalidReadings() {
-        Map<String, Integer> values = new HashMap<>();
-        values.put("heating", -20);
-        values.put("cold water", 30);
-        values.put("hot water", 40);
-        ReadingRequest readingRequest = new ReadingRequest("testUser", 1, 2022, values);
-
-        assertThatThrownBy(() -> readingService.submitReadings(readingRequest))
-                .isInstanceOf(NotValidArgumentException.class);
-    }
-
-    /**
-     * This test verifies that when the getReadingsForMonth method is called,
-     * it returns all Readings for a specific month and year for the user.
-     */
-    @Test
-    @DisplayName("Get readings for month returns readings for specific month and year")
-    void getReadingsForMonth_returnsReadingsForSpecificMonthAndYear() {
-        Reading reading1 = new Reading();
-        reading1.setMonth(1);
-        reading1.setYear(2022);
-
-        when(readingRepository.findByUsernameAndMonthAndYear("testUser", 1, 2022)).thenReturn(List.of(reading1));
-
-        List<Reading> userReadings = readingService.getReadingsForMonth("testUser", 1, 2022);
-
-        assertThat(userReadings).hasSize(1);
-        assertThat(userReadings.get(0)).usingRecursiveComparison().isEqualTo(reading1);
-    }
 
     /**
      * This test verifies that the getReadingsForMonth method throws a ReadingNotFoundException
@@ -163,6 +92,28 @@ class ReadingServiceTest {
     }
 
     /**
+     * This test verifies that when the getReadingsForMonth method is called,
+     * it returns all Readings for a specific month and year for the user.
+     */
+    @Test
+    @DisplayName("Get readings for month returns readings for specific month and year")
+    void getReadingsForMonth_returnsReadingsForSpecificMonthAndYear() {
+        Reading reading1 = new Reading();
+        reading1.setMonth(1);
+        reading1.setYear(2022);
+
+        when(readingRepository.findByUsernameAndMonthAndYear("testUser", 1, 2022)).thenReturn(List.of(reading1));
+
+        ReadingListDTO readingListDTO = new ReadingListDTO();
+        when(readingMapper.toReadingListDTO(List.of(reading1))).thenReturn(readingListDTO);
+
+        ReadingListDTO userReadings = readingService.getReadingsForMonth("testUser", 1, 2022);
+
+        assertThat(userReadings).isNotNull();
+        assertThat(userReadings).isEqualTo(readingListDTO);
+    }
+
+    /**
      * This test verifies that when the getReadingHistory method is called,
      * it returns all Readings for the user.
      */
@@ -172,17 +123,17 @@ class ReadingServiceTest {
         Reading reading1 = new Reading();
         reading1.setMonth(1);
         reading1.setYear(2022);
-        Reading reading2 = new Reading();
-        reading2.setMonth(2);
-        reading2.setYear(2022);
 
-        when(readingRepository.findByUsername("testUser")).thenReturn(Arrays.asList(reading1, reading2));
+        List<Reading> readings = List.of(reading1);
+        when(readingRepository.findByUsername("testUser")).thenReturn(readings);
 
-        List<Reading> userReadings = readingService.getReadingHistory("testUser");
+        ReadingListDTO readingListDTO = new ReadingListDTO();
+        when(readingMapper.toReadingListDTO(readings)).thenReturn(readingListDTO);
 
-        assertThat(userReadings).hasSize(2);
-        assertThat(userReadings.get(0)).usingRecursiveComparison().isEqualTo(reading1);
-        assertThat(userReadings.get(1)).usingRecursiveComparison().isEqualTo(reading2);
+        ReadingListDTO userReadings = readingService.getReadingHistory("testUser");
+
+        assertThat(userReadings).isNotNull();
+        assertThat(userReadings).isEqualTo(readingListDTO);
     }
 
     /**
@@ -209,18 +160,21 @@ class ReadingServiceTest {
     @Test
     @DisplayName("Get actual readings returns most recent reading for user")
     void getActualReadings_returnsMostRecentReadingForUser() {
-        Reading reading1 = new Reading();
-        reading1.setMonth(1);
-        reading1.setYear(2022);
-        Reading reading2 = new Reading();
-        reading2.setMonth(2);
-        reading2.setYear(2022);
+        Reading reading = new Reading();
+        reading.setMonth(1);
+        reading.setYear(2022);
 
-        when(readingRepository.findByUsername("testUser")).thenReturn(Arrays.asList(reading1, reading2));
+        ReadingDTO readingDTO = new ReadingDTO();
+        readingDTO.setMonth(1);
+        readingDTO.setYear(2022);
 
-        Reading actualReading = readingService.getActualReadings("testUser");
+        when(readingRepository.findLatestByUsername("testUser")).thenReturn(Optional.of(reading));
+        when(readingMapper.toReadingDTO(reading)).thenReturn(readingDTO);
 
-        assertThat(actualReading).usingRecursiveComparison().isEqualTo(reading2);
+        ReadingDTO actualReading = readingService.getActualReadings("testUser");
+
+        assertThat(actualReading).isNotNull();
+        assertThat(actualReading).usingRecursiveComparison().isEqualTo(readingDTO);
     }
 
     /**
@@ -233,7 +187,6 @@ class ReadingServiceTest {
     @DisplayName("Get actual readings throws exception when no readings found")
     void getActualReadings_throwsExceptionWhenNoReadingsFound() {
         String username = "testUser";
-        when(readingRepository.findByUsername(username)).thenReturn(List.of());
 
         assertThatThrownBy(() -> readingService.getActualReadings(username))
                 .isInstanceOf(ReadingNotFoundException.class);
